feat (css) focus-visible

--- a/style-css/focus/focus-visible.css
+++ b/style-css/focus/focus-visible.css
@@ -2,9 +2,9 @@
 button:focus-visible {
   outline: 4px dashed black;
 }
-  
+
 /* Focusing the button with a mouse, touch, or stylus will show a subtle drop shadow. */
 button:focus:not(:focus-visible) {
   outline: none;
-  box-shadow: 1px 1px 5px rgba(1, 1, 0, .7);
+  box-shadow: 1px 1px 5px rgba(1, 1, 0, 0.7);
 }
